--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,12 @@ wp-content/cache/
 wp-content/upgrade/
 wp-content/uploads/
 wp-content/wp-cache-config.php
+
+.DS_store
+.ideas
+
+.sass-cache/
+.sass-cache/*
+
+*.css
+*.css.map
